--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,67 +1,44 @@
-@keyframes pulsate {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.6;
-  }
-  100% {
-    transform: scale(1.3);
-    opacity: 0;
-  }
-}
-
 .about {
-  display: flex;
-  padding: 100px 80px;
-  background-color: #1f1f1f;
+  padding-left: 80px;
+  padding-right: 80px;
+  background-color: #0a2750;
   color: #fff;
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
-  margin-top: 0;
+  display: flex;
 }
 
 .about__title {
-  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
-  line-height: 52px;
   font-size: 44px;
+  line-height: 52px;
+  max-width: 251px;
   margin-top: 100px;
-  margin-left: 80px;
-  width: 251px;
   z-index: 1;
 }
 
 .about__content {
-  display: flex;
-  flex-direction: column;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 400;
   max-width: 660px;
-  margin-left: 128px;
-  z-index: 1;
-  gap: 32px;
+  margin-top: 119px;
+  margin-bottom: 173px;
+  margin-top: 119px;
 }
 
 .about__paragraph {
-  margin: 0;
-  margin-bottom: 20px;
-}
-
-.about__paragraph:last-child {
-  margin-bottom: 0;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .about__circle {
   background-color: #2f80ed;
-  width: 495px;
-  height: 495px;
   border-radius: 50%;
   position: absolute;
-  top: -121px;
-  left: -91px;
+  top: -152px;
+  left: -129px;
+  width: 426px;
+  height: 426px;
   z-index: 0;
 }
 
