--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,18 @@
 .header {
-  padding-left: 0px;
-  background-color: white;
-  background-image: url("../images/background_header.svg");
+  background-image: url(./images/background_header.svg);
+  background-color: #fff;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding-top: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .header__title {
@@ -9,28 +20,23 @@
   margin-left: 80px;
   max-width: 729px;
   margin-bottom: 28px;
-  font-family: "Inter";
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
-  position: relative;
-  z-index: 2;
+  z-index: 0;
 }
 
 .header__span-accent {
-  max-width: 729px;
   display: block;
   font-family: "Noto Serif";
   font-style: italic;
-  font-weight: normal;
   font-size: 60px;
   line-height: 72px;
-  color: #2f80ed;
+  display: block;
 }
 
 .header__description {
-  margin-top: 28px;
-  margin-right: 80px;
+  margin-bottom: 202px;
   font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
@@ -40,13 +46,12 @@
 }
 
 .header__image {
-  max-width: 636px;
-  z-index: 1;
-  display: block;
-  margin: 0px auto;
-  top: 135px;
-  right: 20px;
+  width: 646px;
+  height: 568px;
   position: absolute;
+  top: 124px;
+  right: 5px;
+  z-index: -1;
 }
 
 .header__paragraph {
@@ -62,19 +67,15 @@
   position: absolute;
   left: 80px;
   bottom: 40px;
+  list-style: none;
+  padding: 0;
 }
 
 .header__footer {
-  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  padding-left: 80px;
-  padding-right: 80px;
   margin-bottom: 40px;
-  color: #6f6f6f;
   display: flex;
-  align-items: flex-end;
   justify-content: space-between;
-  margin-top: auto;
 }
