--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,26 +1,22 @@
 .menu {
+  background-image: url(./images/background_menu.svg);
   background-color: #0a2750;
-  background-image: url("../images/background_menu.svg");
+  background-position: center;
   background-repeat: no-repeat;
-  size: cover;
-  color: #ffffff;
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
+  background-size: cover;
+  color: white;
+  padding: 100px;
+  box-sizing: border-box;
 }
 .menu__title {
-  max-width: 780px;
-  margin-top: 100px;
-  margin-bottom: 24px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  color: #fff;
-  text-align: center;
+  max-width: 780px;
+  margin: auto;
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: center;
 }
 .menu__subtitle {
   max-width: 780px;
