--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -4,18 +4,13 @@
   justify-content: space-between;
 }
 
-.nav__link-list {
+.nav__links {
   font-family: "Inter";
   font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
   list-style: none;
   padding-left: 0;
   margin-top: 8px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   column-gap: 20px;
 }
 
@@ -24,6 +19,9 @@
   text-decoration: none;
   font-weight: bold;
   display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .nav__link:hover {
