--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,56 +1,53 @@
 .recipes {
+  background-image: url(./images/background_recipes.svg);
   background-color: #ffffff;
-  background-image: url("../images/background_recipes.svg");
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  display: flex;
-  flex-direction: column;
+  padding-left: 80px;
+  padding-top: 100px;
+  box-sizing: border-box;
 }
+
+.recipes__image {
+  position: absolute;
+}
+
 .recipes__title {
-  font-family: "Inter", Arial, sans-serif;
+  margin: 0 0 24px;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  margin-left: 80px;
-  margin-top: 100px;
-  margin-bottom: 24px;
   max-width: 580px;
+  margin-bottom: 24px;
 }
+
 .recipes__subtitle {
   font-family: "Noto Serif", "Times New Roman", serif;
+  font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  margin-left: 80px;
   margin-bottom: 80px;
   max-width: 438px;
-  margin-top: 0;
 }
 
-.recipes__videos {
-  list-style: none;
+.videos {
   display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin-top: 0;
   margin-bottom: 215px;
-  padding: 0;
 }
-
-.recipes__iframe {
+.iframe__video {
+  display: flex;
+  gap: 40px;
   width: 480px;
   height: 273px;
-  display: block;
-  border-style: none;
+  margin-bottom: 24px;
 }
 
-.recipes__video-caption {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-weight: 500px;
+.iframe__video-caption {
+  list-style: none;
+  font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  margin-top: 24px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
 }
