--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,24 +4,22 @@
   justify-content: center;
   align-items: center;
   background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
+  background-image: url(images/background_reservation.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .reservation__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
   font-size: 44px;
+  font-weight: 44px;
   line-height: 52px;
-  padding-top: 100px;
   text-align: center;
   margin-bottom: 80px;
-  margin-top: 0;
+  justify-content: center;
 }
 
 .reservation__form {
-  margin-top: 0;
-  width: 385px;
+  display: flex;
+  justify-content: center;
 }
