--- a/pages/index.css
+++ b/pages/index.css
@@ -1,20 +1,441 @@
-@import url("../vendor/normalize.css");
-@import url("../blocks/page.css");
+@import url(../vendor/normalize.css);
 
-@import url("../blocks/header.css");
-@import url("../blocks/logo.css");
-@import url("../blocks/nav.css");
+.page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
 
-@import url("../blocks/main.css");
+.header {
+  background-image: url(./images/background_header.svg);
+  background-color: #fff;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding-top: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
+  position: relative;
+  box-sizing: border-box;
+}
 
-@import url("../blocks/menu.css");
-@import url("../blocks/card.css");
+.logo {
+  width: 125px;
+  height: 142px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
 
-@import url("../blocks/recipes.css");
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
 
-@import url("../blocks/reservation.css");
-@import url("../blocks/form.css");
+.nav__links {
+  list-style: none;
+  display: flex;
+  column-gap: 20px;
+  margin: 0;
+}
 
-@import url("../blocks/about.css");
+.nav__link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000;
+  text-decoration: none;
+}
 
-@import url("../blocks/footer.css");
+.nav__link:hover {
+  color: #2f80ed;
+}
+.header__title {
+  margin-top: 202px;
+  margin-left: 80px;
+  max-width: 729px;
+  margin-bottom: 28px;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  z-index: 0;
+}
+
+.header__span-accent {
+  display: block;
+  font-family: "Noto Serif";
+  font-style: italic;
+  font-size: 60px;
+  line-height: 72px;
+  display: block;
+}
+
+.header__description {
+  margin-bottom: 202px;
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 683px;
+}
+
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  z-index: -1;
+}
+
+.header__paragraph {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f;
+}
+
+.header__hours {
+  position: absolute;
+  left: 80px;
+  bottom: 40px;
+  list-style: none;
+  padding: 0;
+}
+
+.header__footer {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu__title {
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  max-width: 780px;
+  margin: auto;
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.menu__subtitle {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 780px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  bottom: 100px;
+}
+
+.menu__cards {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  max-width: 680px;
+  margin-right: 100px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card__title {
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  list-style: none;
+  margin-bottom: 32px;
+}
+
+.card__list-item {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+}
+
+.card__list-divider {
+  display: flex;
+  flex-grow: 1;
+}
+
+.recipes {
+  background-image: url(./images/background_recipes.svg);
+  background-color: #ffffff;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-left: 80px;
+  padding-top: 100px;
+  box-sizing: border-box;
+}
+
+.recipes__image {
+  position: absolute;
+}
+
+.recipes__title {
+  margin: 0 0 24px;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  max-width: 580px;
+  margin-bottom: 24px;
+}
+
+.recipes__subtitle {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  margin-bottom: 80px;
+  max-width: 438px;
+}
+
+.videos {
+  display: flex;
+  margin-bottom: 215px;
+}
+.iframe__video {
+  display: flex;
+  gap: 40px;
+  width: 480px;
+  height: 273px;
+  margin-bottom: 24px;
+}
+
+.iframe__video-caption {
+  list-style: none;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.reservation {
+  background-image: url(./images/background_reservation.svg);
+  background-color: #d9e7ff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  box-sizing: border-box;
+}
+
+.reservation__title {
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+
+.reservation__form {
+  display: flex;
+  justify-content: center;
+}
+
+.about {
+  padding-left: 80px;
+  padding-right: 80px;
+  background-color: #0a2750;
+  color: #fff;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+}
+
+.about__content {
+  max-width: 660px;
+  margin-top: 119px;
+  margin-bottom: 173px;
+  margin-top: 119px;
+}
+
+.about__title {
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  max-width: 251px;
+  margin-top: 100px;
+  z-index: 1;
+}
+
+.about__paragraph {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.about__circle {
+  background-color: #2f80ed;
+  border-radius: 50%;
+  position: absolute;
+  top: -152px;
+  left: -129px;
+  width: 426px;
+  height: 426px;
+  z-index: 0;
+}
+
+.form {
+  margin: 0 auto 120px auto;
+  max-width: 385px;
+}
+
+.form__fieldset {
+  max-width: 385px;
+}
+
+.form__label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 8px;
+  display: flex;
+}
+
+.form__input {
+  box-sizing: border-box;
+  width: 385px;
+  border-radius: 4px;
+  border: 0;
+  margin: 0 auto 32px auto;
+  height: 60px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form__input_date {
+}
+
+.form__input {
+}
+
+.form__input::placeholder {
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+}
+
+.form__button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #2f80ed;
+  color: #fff;
+  height: 60px;
+  width: 385px;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__checkbox {
+  margin: 0 12px 0 auto;
+  border-radius: 2px;
+  height: 20px;
+  width: 20px;
+  background-color: #2f80ed;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__label-checkbox {
+  display: flex;
+  justify-content: center;
+}
+
+.footer {
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  box-sizing: border-box;
+  color: #fff;
+  padding: 60px 100px 60px 80px;
+}
+
+.footer__contents {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__content {
+}
+
+.footer__logo {
+  width: 116px;
+  height: 21px;
+}
+
+.footer__content_type_social-heading {
+  margin: 0 0 20px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__list-item {
+  margin-bottom: 16px;
+  margin-left: 100px;
+}
+
+.footer__list-item:last-of-type {
+  margin-bottom: 0;
+}
+
+.footer__social-link {
+  color: #fff;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.footer__social-link:hover {
+  color: #c1c1c1;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.footer__copyright {
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+}
