--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(../vendor/normalize.css);
+@import url(/vendor/normalize.css);
 
 .page {
   min-width: 1100px;
@@ -10,7 +10,7 @@
 }
 
 .header {
-  background-image: url(./images/background_header.svg);
+  background-image: url(images/background_header.svg);
   background-color: #fff;
   background-position: center;
   background-size: cover;
@@ -181,7 +181,7 @@
 }
 
 .recipes {
-  background-image: url(./images/background_recipes.svg);
+  background-image: url(images/background_recipes.svg);
   background-color: #ffffff;
   background-position: center;
   background-repeat: no-repeat;
@@ -235,7 +235,7 @@
 }
 
 .reservation {
-  background-image: url(./images/background_reservation.svg);
+  background-image: url(images/background_reservation.svg);
   background-color: #d9e7ff;
   background-repeat: no-repeat;
   background-size: cover;
