--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(/vendor/normalize.css);
+@import url(../vendor/normalize.css);
 
 .page {
   min-width: 1100px;
@@ -10,7 +10,7 @@
 }
 
 .header {
-  background-image: url(images/background_header.svg);
+  background-image: url(/images/background_header.svg);
   background-color: #fff;
   background-position: center;
   background-size: cover;
