--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,5 +1,5 @@
 .menu {
-  background-image: url(./images/background_menu.svg);
+  background-image: url(/images/background_menu.svg);
   background-color: #0a2750;
   background-position: center;
   background-repeat: no-repeat;
