--- a/pages/index.css
+++ b/pages/index.css
@@ -116,17 +116,18 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  display: flex;
-  justify-content: space-between;
+  color: #838383;
+  margin: 0;
 }
 
 .header__footer {
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 40px;
   display: flex;
   justify-content: space-between;
+  padding-top: 45px;
+  float: right;
 }
 
 .menu {
@@ -136,36 +137,40 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
-  padding: 100px;
   box-sizing: border-box;
+  margin-top: 10px;
+  padding: 100px;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  width: 100%;
 }
 
 .menu__title {
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  max-width: 780px;
-  margin: auto;
+  min-width: 780px;
+  margin-top: 100px;
   margin-bottom: 24px;
-  display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 .menu__subtitle {
   font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  max-width: 780px;
-  display: flex;
   justify-content: center;
-  margin: auto;
-  bottom: 100px;
+  margin-top: 0;
 }
 
 .menu__cards {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  max-width: 680px;
+  min-width: 600px;
   margin-right: 100px;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
@@ -173,12 +178,20 @@
   font-size: 20px;
   line-height: 30px;
   color: #fff;
-  gap: 100px;
+  gap: 40px;
+  justify-content: center;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
+  max-width: 600px;
+  flex-basis: 45%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .card__title {
@@ -195,13 +208,14 @@
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 16px;
-  display: flex;
   justify-content: center;
+  display: flex;
 }
 
 .card__list-divider {
   display: flex;
   flex-grow: 1;
+  align-items: baseline;
 }
 
 .recipes {
