--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,41 +5,47 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
-  padding: 100px;
   box-sizing: border-box;
+  margin-top: 10px;
+  padding: 100px;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  width: 100%;
 }
+
 .menu__title {
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  max-width: 780px;
-  margin: auto;
+  min-width: 780px;
+  margin-top: 100px;
   margin-bottom: 24px;
-  display: flex;
   justify-content: center;
+  text-align: center;
 }
+
 .menu__subtitle {
-  max-width: 780px;
-  margin-top: 24px;
-  margin-bottom: 100px;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  color: #fff;
-}
-.menu__cards {
-  display: flex;
-  flex-direction: row;
   justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 0;
+}
+
+.menu__cards {
+  min-width: 600px;
+  margin-right: 100px;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
   color: #fff;
-  gap: 100px;
+  gap: 40px;
+  justify-content: center;
 }
