--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -5,25 +5,19 @@
 }
 
 .nav__links {
-  font-family: "Inter";
-  font-style: normal;
   list-style: none;
-  padding-left: 0;
-  margin-top: 8px;
   display: flex;
   column-gap: 20px;
+  margin: 0;
 }
 
 .nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+  color: #000;
+  text-decoration: none;
 }
-
 .nav__link:hover {
-  color: #1f69c9;
+  color: #2f80ed;
 }
