--- a/pages/index.css
+++ b/pages/index.css
@@ -169,8 +169,7 @@
   margin-top: 0;
 }
 
-.menu__cards {
-  min-width: 600px;
+.cards {
   margin-right: 100px;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
@@ -178,20 +177,17 @@
   font-size: 20px;
   line-height: 30px;
   color: #fff;
-  gap: 40px;
-  justify-content: center;
+  flex-basis: 500px;
 }
 
-.cards {
+.menu__card {
   display: flex;
   flex-wrap: wrap;
-  max-width: 600px;
-  flex-basis: 45%;
   display: flex;
-  flex-direction: column;
   margin-bottom: 100px;
   margin-left: 0;
   margin-right: 0;
+  gap: 40px;
 }
 
 .card__title {
