--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,27 +1,36 @@
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 600px;
-  flex-basis: 45%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 100px;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.card__title {
-  color: #fff;
+.card {
+  font-family: Inter;
+  font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
+  color: #fff;
+  flex-basis: 550px;
+  align-items: center;
+  max-width: 600px;
+}
+
+.card__title {
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
   list-style: none;
   margin-bottom: 32px;
+  margin-top: 0;
+}
+
+.card__list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .card__list-item {
-  font-family: "Noto Serif", "Times New Roman", serif;
+  font-family: Noto Serif;
   font-size: 16px;
+  font-weight: normal;
   line-height: 20px;
   margin-bottom: 16px;
   justify-content: center;
