--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -17,35 +17,37 @@
 }
 
 .menu__title {
-  font-weight: 500;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
   font-size: 44px;
   line-height: 52px;
-  min-width: 780px;
-  margin-top: 100px;
+  max-width: 780px;
+  margin-top: -110px;
   margin-bottom: 24px;
   justify-content: center;
   text-align: center;
+  padding: 40px;
 }
 
 .menu__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
+  font-family: Noto Serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  justify-content: center;
-  margin-top: 0;
+  margin-top: -40px;
+  text-indent: -45px;
 }
 
 .menu__cards {
-  min-width: 600px;
-  margin-right: 100px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 100px;
+  margin-left: 0;
+  margin-right: 0;
   gap: 40px;
+  padding-left: 0;
+  width: 100%;
   justify-content: center;
 }
