--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -7,8 +7,7 @@
   padding-left: 80px;
   padding-top: 100px;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+  padding: 100px 80px 140px;
 }
 
 .recipes__image {
@@ -20,8 +19,12 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  font-family: "Inter", serif;
   max-width: 580px;
-  margin-bottom: 24px;
+}
+
+.recipes__video-item {
+  width: 480px;
 }
 
 .recipes__subtitle {
@@ -31,25 +34,37 @@
   line-height: 30px;
   margin-bottom: 80px;
   max-width: 438px;
+  margin-top: 0;
 }
 
-.videos {
-  display: flex;
-  margin-bottom: 215px;
-}
-.iframe__video {
-  display: flex;
-  gap: 40px;
-  width: 480px;
-  height: 273px;
-  margin-bottom: 24px;
+.recipes__iframe {
+  width: 100%;
+  height: 270px;
+  border: none;
+  position: relative;
+  z-index: 1;
+  background-color: #ccc;
 }
 
-.iframe__video-caption {
-  list-style: none;
+.recipes__video-caption {
+  margin: 24px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Inter", serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+  list-style: none;
+  margin-bottom: 215;
+}
+
+.recipes__videos {
   display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 80px 0 0;
+  padding: 0;
+  column-gap: 80px;
   flex-wrap: wrap;
 }
