--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -12,11 +12,13 @@
 
 .reservation__title {
   font-size: 44px;
-  font-weight: 44px;
+  font-weight: 500px;
   line-height: 52px;
   text-align: center;
   margin-bottom: 80px;
   justify-content: center;
+  display: flex;
+  margin-top: 100px;
 }
 
 .reservation__form {
