--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,3 +1,16 @@
+@keyframes pulsate {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
 .about {
   padding-left: 80px;
   padding-right: 80px;
@@ -23,12 +36,19 @@
   margin-top: 119px;
   margin-bottom: 173px;
   margin-top: 119px;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  line-height: 20px;
+  margin-left: 128px;
+  gap: 32px;
 }
 
 .about__paragraph {
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
+  margin: 0;
 }
 
 .about__circle {
