--- a/blocks/about.css
+++ b/blocks/about.css
@@ -20,6 +20,19 @@
   position: relative;
   box-sizing: border-box;
   display: flex;
+  justify-content: space-between;
+}
+
+.about__content {
+  max-width: 660px;
+  margin-top: 119px;
+  margin-bottom: 173px;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  line-height: 20px;
+  margin-left: 128px;
+  gap: 20px;
 }
 
 .about__title {
@@ -29,23 +42,13 @@
   max-width: 251px;
   margin-top: 100px;
   z-index: 1;
-}
-
-.about__content {
-  max-width: 660px;
-  margin-top: 119px;
-  margin-bottom: 173px;
-  margin-top: 119px;
-  display: flex;
-  flex-direction: column;
-  font-size: 20px;
-  line-height: 20px;
-  margin-left: 128px;
-  gap: 32px;
+  padding-left: 30px;
 }
 
 .about__paragraph {
   font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   margin: 0;
@@ -63,5 +66,5 @@
 }
 
 .about__circle_animation_blurred {
-  animation: pulsate 1.3s ease-in-out infinite;
+  animation: pulsate 1.3s ease-in-out 0s infinite;
 }
