--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,25 +8,28 @@
 .footer__content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 .footer__logo {
   width: 116px;
   height: 21px;
 }
-.footer__contents {
-}
 
 .footer__social-heading {
   margin: 0 0 20px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
+  text-align: right;
 }
 
 .footer__list {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-left: auto;
 }
 
 .footer__list-item {
@@ -45,6 +48,9 @@
 
 .footer__social-link {
   color: #fff;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
@@ -54,8 +60,14 @@
 
 .footer__social-link:hover {
   color: #c1c1c1;
+  transition: 0.3s;
 }
 
 .footer__copyright {
-  margin: 0;
+  margin: 108px 0 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
