--- a/blocks/header.css
+++ b/blocks/header.css
@@ -60,9 +60,6 @@
 }
 
 .header__hours {
-  position: absolute;
-  left: 80px;
-  bottom: 40px;
   list-style: none;
   padding: 0;
 }
@@ -84,5 +81,12 @@
   display: flex;
   justify-content: space-between;
   padding-top: 45px;
-  float: right;
+  align-items: flex-end;
+  position: absolute;
+  left: 0px;
+  padding-left: 80px;
+  padding-right: 80px;
+  bottom: 40px;
+  width: 100%;
+  box-sizing: border-box;
 }
