--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,7 +1,7 @@
 .nav {
-  align-items: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .nav__links {
@@ -18,6 +18,7 @@
   color: #000;
   text-decoration: none;
 }
+
 .nav__link:hover {
   color: #2f80ed;
 }
