--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,17 +4,18 @@
   justify-content: center;
   align-items: center;
   background-color: #d9e7ff;
-  background-image: url(images/background_reservation.svg);
+  background-image: url(/images/2-background_reservation.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .reservation__title {
+  font-family: "Inter";
+  font-style: normal;
   font-size: 44px;
-  font-weight: 500px;
+  font-weight: 500;
   line-height: 52px;
-  text-align: center;
   margin-bottom: 80px;
   justify-content: center;
   display: flex;
@@ -22,6 +23,7 @@
 }
 
 .reservation__form {
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
+  border-style: none;
 }
