--- a/pages/index.css
+++ b/pages/index.css
@@ -1,574 +1,27 @@
 @import url(../vendor/normalize.css);
 
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url(../blocks/about.css);
 
-.header {
-  background-image: url(/images/background_header.svg);
-  background-color: #fff;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  z-index: -1;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding-top: 30px;
-  padding-left: 80px;
-  padding-right: 80px;
-  position: relative;
-  box-sizing: border-box;
-}
+@import url(../blocks/cards.css);
 
-.logo {
-  width: 125px;
-  height: 142px;
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
+@import url(../blocks/font.css);
 
-.nav {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
+@import url(../blocks/footer.css);
 
-.nav__links {
-  list-style: none;
-  display: flex;
-  column-gap: 20px;
-  margin: 0;
-}
+@import url(../blocks/form.css);
 
-.nav__link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000;
-  text-decoration: none;
-}
+@import url(../blocks/header.css);
 
-.nav__link:hover {
-  color: #2f80ed;
-}
-.header__title {
-  display: flex;
-  color: black;
-  max-width: 729px;
-  margin: 202px 0 0 80px;
-  flex-direction: column;
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  z-index: 0;
-  margin-left: 0px;
-}
+@import url(../blocks/logo.css);
 
-.span__accent {
-  font-family: "Noto serif", "Times New Roman", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
-  display: block;
-}
+@import url(../blocks/menu.css);
 
-.header__description {
-  max-width: 683px;
-  font-family: "Noto serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin-bottom: 202px;
-}
+@import url(../blocks/nav.css);
 
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  z-index: -1;
-}
+@import url(../blocks/page.css);
 
-.header__hours {
-  list-style: none;
-  padding: 0;
-}
+@import url(../blocks/recipes.css);
 
-.header__paragraph {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin: 0;
-}
+@import url(../blocks/reservation.css);
 
-.header__footer {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 45px;
-  align-items: flex-end;
-  position: absolute;
-  left: 0px;
-  padding-left: 80px;
-  padding-right: 80px;
-  bottom: 40px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.menu {
-  background-image: url(/images/background_menu.svg);
-  background-color: #0a2750;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: white;
-  box-sizing: border-box;
-  margin-top: 10px;
-  padding: 100px;
-  align-items: center;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-content: space-around;
-  width: 100%;
-}
-
-.menu__title {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  max-width: 780px;
-  margin-top: -110px;
-  margin-bottom: 24px;
-  justify-content: center;
-  text-align: center;
-  padding: 40px;
-}
-
-.menu__subtitle {
-  font-family: Noto Serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: -40px;
-  text-indent: -45px;
-}
-
-.card {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-  flex-basis: 550px;
-  align-items: center;
-  max-width: 600px;
-}
-
-.menu__cards {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 100px;
-  margin-left: 0;
-  margin-right: 0;
-  gap: 40px;
-  padding-left: 0;
-  width: 100%;
-  justify-content: center;
-}
-
-.card__title {
-  font-family: Inter;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-  list-style: none;
-  margin-bottom: 32px;
-  margin-top: 0;
-}
-
-.card__list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-
-.card__list-item {
-  font-family: Noto Serif;
-  font-size: 16px;
-  font-weight: normal;
-  line-height: 20px;
-  margin-bottom: 16px;
-  justify-content: center;
-  display: flex;
-}
-
-.card__list-divider {
-  display: flex;
-  flex-grow: 1;
-  align-items: baseline;
-}
-
-.recipes {
-  background-image: url(/images/background_recipes.svg);
-  background-color: #ffffff;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-left: 80px;
-  padding-top: 100px;
-  box-sizing: border-box;
-  padding: 100px 80px 140px;
-}
-
-.recipes__image {
-  position: absolute;
-}
-
-.recipes__title {
-  margin: 0 0 24px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  font-family: "Inter", serif;
-  max-width: 580px;
-}
-
-.recipes__video-item {
-  width: 480px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  margin-bottom: 80px;
-  max-width: 438px;
-  margin-top: 0;
-}
-
-.recipes__iframe {
-  width: 100%;
-  height: 270px;
-  border: none;
-  position: relative;
-  z-index: 1;
-  background-color: #ccc;
-}
-
-.recipes__video-caption {
-  margin: 24px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: "Inter", serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  list-style: none;
-  margin-bottom: 215;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-  margin: 80px 0 0;
-  padding: 0;
-  column-gap: 80px;
-  flex-wrap: wrap;
-}
-
-.reservation {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #d9e7ff;
-  background-image: url(/images/2-background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.reservation__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-size: 44px;
-  font-weight: 500;
-  line-height: 52px;
-  margin-bottom: 80px;
-  justify-content: center;
-  display: flex;
-  margin-top: 100px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-  padding: 0;
-  border-style: none;
-}
-
-.form {
-  margin: 0 auto 120px auto;
-  max-width: 385px;
-  flex-wrap: wrap;
-  justify-content: center;
-  display: flex;
-}
-
-.form__fieldset {
-  max-width: 385px;
-  color: #838383;
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
-.form__label:last-of-type {
-  display: flex;
-  justify-content: center;
-}
-
-.form__label {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin-top: 0;
-  margin-bottom: 8px;
-  display: flex;
-  color: black;
-  flex-direction: column;
-}
-
-.form__input {
-  box-sizing: border-box;
-  width: 385px;
-  border-radius: 4px;
-  border: 1px solid #838383;
-  border: 0;
-  margin: 0 auto 32px auto;
-  height: 60px;
-  font-family: "Inter";
-  font-size: 20px;
-  line-height: 30px;
-  margin-left: auto;
-  justify-content: center;
-}
-
-.form__label::placeholder {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-}
-
-.form__button {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #2f80ed;
-  border-radius: 4px;
-  border: 0 none;
-  color: #fff;
-  height: 60px;
-  width: 385px;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-  transition: 0.3s;
-}
-
-.form__checkbox {
-  margin: 0 12px 0 0;
-  border-radius: 2px;
-  height: 20px;
-  width: 20px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #2f80ed;
-}
-
-.form__terms {
-  display: flex;
-  justify-content: center;
-  margin-top: 32px;
-}
-
-@keyframes pulsate {
-  0% {
-    opacity: 0.6;
-  }
-  50% {
-    opacity: 0.6;
-  }
-  100% {
-    transform: scale(1.5);
-    opacity: 0;
-  }
-}
-
-.about {
-  padding-left: 80px;
-  padding-right: 80px;
-  background-color: #0a2750;
-  color: #fff;
-  overflow: hidden;
-  position: relative;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-}
-
-.about__content {
-  max-width: 660px;
-  margin-top: 119px;
-  margin-bottom: 173px;
-  display: flex;
-  flex-direction: column;
-  font-size: 20px;
-  line-height: 20px;
-  margin-left: 128px;
-  gap: 20px;
-}
-
-.about__title {
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  max-width: 251px;
-  margin-top: 100px;
-  z-index: 1;
-  padding-left: 30px;
-}
-
-.about__paragraph {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 0;
-}
-
-.about__circle {
-  background-color: #2f80ed;
-  border-radius: 50%;
-  position: absolute;
-  top: -152px;
-  left: -129px;
-  width: 426px;
-  height: 426px;
-  z-index: 0;
-}
-
-.about__circle_animation_blurred {
-  animation: pulsate 1.3s ease-in-out 0s infinite;
-}
-
-.footer {
-  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  box-sizing: border-box;
-  color: #fff;
-  padding: 60px 100px 60px 80px;
-}
-
-.footer__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.footer__logo {
-  width: 116px;
-  height: 21px;
-}
-
-.footer__social-heading {
-  margin: 0 0 20px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: right;
-}
-
-.footer__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-left: auto;
-}
-
-.footer__list-item {
-  margin-bottom: 16px;
-  margin-left: 100px;
-}
-.footer__list-item:last-of-type {
-  margin-bottom: 0;
-}
-
-.footer__social-icon {
-  width: 16px;
-  height: 16px;
-  margin-right: 10px;
-}
-
-.footer__social-link {
-  color: #fff;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-}
-
-.footer__social-link:hover {
-  color: #c1c1c1;
-  transition: 0.3s;
-}
-
-.footer__copyright {
-  margin: 108px 0 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url(../pages/index.css);
